# evm-from-scratch-rust

rust/: Cargo.toml
rust/src/: lib.rs  main.rs  memory.rs  opcodes.rs  utils.rs
