[package]
name = "evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
hex = "0.4.3"
primitive-types = "0.12.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
